Ajout d'un onglet Avis et Dérogations (#33)
* modification avant refacto card

* ajout edition sans dossier lie

* ecriture donnee + ajout admin

* modif css + appelle controller

* debut champ fusion

* ajout fichier sql creation table avis derogations

* Corrections SQLs

* Correction champ de fusion

* Définition des TODOs

* to do enlever wiziwig + passer en objet pas en attribut

* debut fix delete

* todo delete externalise

* IS_FAVORABLE ==> AVIS + modification update via Zend

* optimisation passage param en insert

* php echo --> <?=

* ajout champ fusion generation pv

* ajout champ de fusion

* champ fusion odj

* ajout libelle dans la carte

* to do css

* TODO generation rapport ==> ajout avis derogation

* Corrections diverses

* Surbrillance de l'onglet

* Utilisation du helper URL

* Corrections CSS

* fixup

* Ajout avis dérogations rapport

* Avis dérogations compte rendu

* Avis dérogations odj

* Ajout infos étab sur onglet avis et dérogations

* Avis dérogations pv

* Avis dérogations convoc

* Ajustement taille titre card

* Correction sur l'affichage de l'objet du dossier lié

* Correction sur la génération du compte-rendu

* Corrections diverses

* Corrections de style

* Simplification des fonctions

* Modification du type du champ type

* Mise à jour du champ dans les générations

* Utilisation de la table avis en jointure

* Remise en état visuel sur l'édition

* Corrections sur l'affichage dans l'historique de l'établissement

* Corrections affichage historique si pas d'élément

* Fixup

* Fixup

* Ajout privilège sur la vue

* Correction sur l'affichage du titre

* Correction sur l'appel des fonctions

* Correction de l'affichage si pas de date de commission renseignée

Co-authored-by: valentinrouxelrennes <valentin.rouxel@atos.net>

--- a/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
@@ -73,7 +73,7 @@ foreach($this->informationsMembre as $val => $membre){
 				$heureCommTab = explode(":",$this->heureDeb);
 				$heureComm = $heureCommTab[0].":".$heureCommTab[1];
 				setVars($villeODF,'heureDebutComm',$heureComm);
-                                
+
 				$heureDebut = '';
 				foreach($this->dossierComm as $val => $dossierInfos){
 					if(
@@ -92,7 +92,7 @@ foreach($this->informationsMembre as $val => $membre){
 					}
 				}
 				setVars($villeODF, 'heureDeb1erDossier', $heureDebut);
-                                
+
 				//ICI FOREACH SUR LES DOSSIERS DE LA COMMUNE
 				//Generation du segment pour l'affichage des différentes infos du dossier
 				$infosDoss = $villeODF->infosDoss;
@@ -288,6 +288,27 @@ function retrieveInfoDossier($segment, $dossierInfos) {
 	foreach ($tabEffDegKV as $nomChamp => $valeurChamp) {
 		setVars($segment, $nomChamp, $valeurChamp);
 	}
+
+    // Gestion des avis & dérogations
+    $segmentAvisDerogations = $segment->avisDerogations;
+
+    foreach ($dossierInfos["AVIS_DEROGATIONS"] as $avisDerogation) {
+        setVars($segmentAvisDerogations, 'type', $avisDerogation['TYPE']);
+        setVars($segmentAvisDerogations, 'titre', $avisDerogation['TITRE']);
+        setVars($segmentAvisDerogations, 'informations', $avisDerogation['INFORMATIONS']);
+        setVars($segmentAvisDerogations, 'avis', $avisDerogation['LIBELLE_AVIS']);
+        setVars($segmentAvisDerogations, 'identifiantdossierleve', $avisDerogation['ID_DOSSIER_LIE']);
+
+        if (true === boolval($avisDerogation['DISPLAY_HISTORIQUE'])) {
+            $avisDerogation['DISPLAY_HISTORIQUE'] = 'Oui';
+        } else {
+            $avisDerogation['DISPLAY_HISTORIQUE'] = 'Non';
+        }
+
+        setVars($segmentAvisDerogations, 'affichagehistorique', $avisDerogation['DISPLAY_HISTORIQUE']);
+
+        $segmentAvisDerogations->merge();
+    }
 }
 
 function retrieveInfoGroupementCommission($odf, $commissionInfos, $heureDeb, $dateComm, $infosGroupement, $listeCommunes) {
