--- a/application/views/scripts/calendrier-des-commissions/generationodj.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationodj.phtml
@@ -8,7 +8,7 @@ if(count($this->membresFiles) == 0){
 foreach($this->informationsMembre as $val => $membre){
 	//On boucle sur les membres
 	if($membre['infosFiles'][0]['ID_GROUPEMENT'] == NULL) {
-		//génération du document par commune pour les maires par exemple		
+		//génération du document par commune pour les maires par exemple
 		//si le document concernant ce membre existe alors on rentre dans la boucle
         $nomFichier = $membre['infosFiles'][0]['ID_COMMISSIONMEMBRE']."ODJ_".$membre['infosFiles'][0]['COURRIER_ODJ'];
 
@@ -21,15 +21,15 @@ foreach($this->informationsMembre as $val => $membre){
                 //LIBELLE COMMUNE = 0
                 //Array des infos de la commune = 1
                 if(isset($commune[0])){
-                    $firstLetter = $commune[0]{0}; 
+                    $firstLetter = $commune[0]{0};
                     if(in_array($firstLetter, $consonne)){
                         $communeShow = "d'".$commune[0];
                     }else{
                         $communeShow = "de ".$commune[0];
                     }
-                    
+
                     if(count($commune[1]) == 1){
-                        foreach($commune[1] as $comm => $info){	
+                        foreach($commune[1] as $comm => $info){
                             addChamp($membreLoop,'numMairie',$info["NUMEROADRESSE_UTILISATEURINFORMATIONS"]);
                             addChamp($membreLoop,'rueMairie',$info["RUEADRESSE_UTILISATEURINFORMATIONS"]);
                             addChamp($membreLoop,'cpMairie',$info["CPADRESSE_UTILISATEURINFORMATIONS"]);
@@ -45,19 +45,19 @@ foreach($this->informationsMembre as $val => $membre){
                 }
 
                 addChamp($membreLoop,'commissionNom',$this->commissionInfos[0]['LIBELLE_COMMISSION']);
-                
+
                 $dateDuJour = new Zend_Date();
                 addChamp($membreLoop,'date',$dateDuJour->get(Zend_Date::DAY."/".Zend_Date::MONTH."/".Zend_Date::YEAR));
-                                    
+
                 $dateComm = new Zend_Date($this->dateComm);
                 addChamp($membreLoop,'dateCommission',$dateComm->get(Zend_Date::DAY."/".Zend_Date::MONTH."/".Zend_Date::YEAR));
-                
+
                 $heureCommTab = explode(":",$this->heureDeb);
                 $heureComm = $heureCommTab[0].":".$heureCommTab[1];
                 addChamp($membreLoop,'heureDebutComm',$heureComm);
 
                 //ICI FOREACH SUR LES DOSSIERS DE LA COMMUNE
-                //Generation du segment pour l'affichage des différentes infos du dossier	
+                //Generation du segment pour l'affichage des différentes infos du dossier
                 foreach($this->dossierComm as $val => $dossierInfos){
                     if(
                         count($dossierInfos['infosEtab']['adresses']) > 0
@@ -69,10 +69,10 @@ foreach($this->informationsMembre as $val => $membre){
                         )
                     ){
                         retrieveInfoDoss($membreLoop, $dossierInfos);
-                        $membreLoop->infosDoss->merge(); 
+                        $membreLoop->infosDoss->merge();
                     }
                 }
-                                    
+
                 $membreLoop->merge();
             }
             $odf->mergeSegment($membreLoop);
@@ -98,7 +98,7 @@ foreach($this->informationsMembre as $val => $membre){
             $grpLoop = $odf->setSegment('grpLoop');
 
             addChamp($grpLoop,'commissionNom',$this->commissionInfos[0]['LIBELLE_COMMISSION']);
-            
+
             $dateDuJour = new Zend_Date();
             addChamp($grpLoop,'date',$dateDuJour->get(Zend_Date::DAY."/".Zend_Date::MONTH."/".Zend_Date::YEAR));
             addChamp($grpLoop,'communeGrp',$infosGroupement["VILLEADRESSE_UTILISATEURINFORMATIONS"]);
@@ -115,7 +115,7 @@ foreach($this->informationsMembre as $val => $membre){
             foreach($this->dossierComm as $val => $dossierInfos){
                 //On parcourt la liste des ville du groupement concerné pour comparer avec la ville du dossier
                 retrieveInfoDoss($grpLoop, $dossierInfos);
-                $grpLoop->infosDoss->merge(); 
+                $grpLoop->infosDoss->merge();
 
             }
             $grpLoop->merge();
@@ -133,7 +133,7 @@ foreach($this->informationsMembre as $val => $membre){
 
 function addChamp($odfName, $nomOdf, $variable){
     try{
-        $odfName->setVars($nomOdf,$variable,true,'UTF8');		
+        $odfName->setVars($nomOdf,$variable,true,'UTF8');
     }catch (Exception $e) {
     }
 }
@@ -157,7 +157,7 @@ function retrieveInfoDoss($segment, $dossierInfos) {
     addChamp($segment->infosDoss, 'avisDossier', getAvis($dossierInfos["AVIS_DOSSIER"]));
     addChamp($segment->infosDoss, 'nomEtab', $dossierInfos['infosEtab']['informations']["LIBELLE_ETABLISSEMENTINFORMATIONS"]);
     addChamp($segment->infosDoss, 'numWinPrev', $dossierInfos['infosEtab']['general']['NUMEROID_ETABLISSEMENT']);
-        
+
     if(isset($dossierInfos['infosEtab']['parents'][0]) && $dossierInfos['infosEtab']['parents'][0]["LIBELLE_ETABLISSEMENTINFORMATIONS"] != NULL) {
         addChamp($segment->infosDoss, 'nomPereEtab', $dossierInfos['infosEtab']['parents'][0]["LIBELLE_ETABLISSEMENTINFORMATIONS"]);
     }
@@ -166,7 +166,7 @@ function retrieveInfoDoss($segment, $dossierInfos) {
         $nomPere = $dossierInfos['infosEtab']['parents'][0]["LIBELLE_ETABLISSEMENTINFORMATIONS"];
     }
     addChamp($segment->infosDoss, 'nomPereEtab', $nomPere);
-    
+
     try{
         $date = new Zend_Date($dossierInfos["DATEVISITE_DOSSIER"]);
         $dateVisite = $dossierInfos["DATEVISITE_DOSSIER"] ? $date->get(Zend_Date::DAY."/".Zend_Date::MONTH."/".Zend_Date::YEAR) : '';
@@ -174,10 +174,10 @@ function retrieveInfoDoss($segment, $dossierInfos) {
     } catch (Exception $e){
         addChamp($segment->infosDoss, 'dateVisite', '');
     }
-    
+
     addChamp($segment->infosDoss, 'categorieEtab', $dossierInfos['infosEtab']['informations']["LIBELLE_CATEGORIE"]);
     addChamp($segment->infosDoss, 'typeLettreP', $dossierInfos['infosEtab']['informations']["LIBELLE_TYPE_PRINCIPAL"]);
-    
+
     addChamp($segment->infosDoss, 'natureDossier', $dossierInfos["LIBELLE_DOSSIERNATURE"]);
     addChamp($segment->infosDoss, 'objetDossier', $dossierInfos["OBJET_DOSSIER"]);
     $commune = "";
@@ -193,7 +193,7 @@ function retrieveInfoDoss($segment, $dossierInfos) {
         $adresse .= $dossierInfos['infosEtab']["adresses"][0]["LIBELLE_COMMUNE"];
     }
     addChamp($segment->infosDoss, 'etablissementAdresse', $adresse);
-    
+
     if(isset($dossierInfos["HEURE_DEB_AFFECT"])){
         $heureDebutTab = explode(":",$dossierInfos["HEURE_DEB_AFFECT"]);
         $heureDebut = $heureDebutTab[0].":".$heureDebutTab[1];
@@ -236,6 +236,26 @@ function retrieveInfoDoss($segment, $dossierInfos) {
     foreach ($tabEffDegKV as $nomChamp => $valeurChamp) {
         addChamp($segment->infosDoss, $nomChamp, $valeurChamp);
     }
+
+	$segmentAvisDerogations = $segment->infosDoss->avisDerogations;
+
+    foreach ($dossierInfos["AVIS_DEROGATIONS"] as $avisDerogation) {
+        addChamp($segmentAvisDerogations, 'type', $avisDerogation['TYPE']);
+        addChamp($segmentAvisDerogations, 'titre', $avisDerogation['TITRE']);
+        addChamp($segmentAvisDerogations, 'informations', $avisDerogation['INFORMATIONS']);
+        addChamp($segmentAvisDerogations, 'avis', $avisDerogation['LIBELLE_AVIS']);
+        addChamp($segmentAvisDerogations, 'identifiantdossierleve', $avisDerogation['ID_DOSSIER_LIE']);
+
+        if (true === boolval($avisDerogation['DISPLAY_HISTORIQUE'])) {
+            $avisDerogation['DISPLAY_HISTORIQUE'] = 'Oui';
+        } else {
+            $avisDerogation['DISPLAY_HISTORIQUE'] = 'Non';
+        }
+
+        addChamp($segmentAvisDerogations, 'affichagehistorique', $avisDerogation['DISPLAY_HISTORIQUE']);
+
+        $segmentAvisDerogations->merge();
+    }
 }
 
 function savePj($dateCommId,$libelleMembre){
@@ -248,7 +268,7 @@ function savePj($dateCommId,$libelleMembre){
 	$nouvellePJ->DESCRIPTION_PIECEJOINTE = "Ordre du jour générée ".$libelleMembre." ".$dateDuJour->get(Zend_Date::DAY."/".Zend_Date::MONTH."/".Zend_Date::YEAR." à ".Zend_Date::HOUR.":".Zend_Date::MINUTE);
 	$nouvellePJ->DATE_PIECEJOINTE = $dateDuJour->get(Zend_Date::YEAR."-".Zend_Date::MONTH."-".Zend_Date::DAY." ".Zend_Date::HOUR.":".Zend_Date::MINUTE.":".Zend_Date::SECOND);
 	$nouvellePJ->save();
-	
+
 	//ENREGISTREMENT DE LA PIECE JOINTE DANS DATECOMMISSIONPJ
 
 	$DBsave = new Model_DbTable_DateCommissionPj;
@@ -262,7 +282,7 @@ function savePj($dateCommId,$libelleMembre){
 
 function getAvis($avis) {
     $avisInt = (int) $avis;
-    
+
     if ($avisInt == 0) {
         return "";
     } else if ($avisInt == 1) {
