Correction sur l'affichage utilisateur des rubriques

--- a/application/views/scripts/formulaire/index.phtml
+++ b/application/views/scripts/formulaire/index.phtml
@@ -41,7 +41,7 @@
                                     <tr>
                                         <td><?php echo $rubrique['NOM'] ?></td>
                                         <td id='default-display'>
-                                            <?php if($rubrique['DEFAULT_DISPLAY']): ?>
+                                            <?php if($rubrique['DISPLAY']): ?>
                                                 <div class="text-center">
                                                     <i class="icon-ok"></i>
                                                 </div>
