--- a/application/views/scripts/formulaire/edit-rubrique.phtml
+++ b/application/views/scripts/formulaire/edit-rubrique.phtml
@@ -7,9 +7,9 @@
     <h3>Informations sur la rubrique</h3>
     <div class="span4 infos-rubrique">
         <form action class="form-inline" method="post">
-            <input type="hidden" id="rubrique-id" value="<?php echo $this->rubrique['ID_RUBRIQUE'] ?>">
+            <input type="hidden" id="rubrique-id" value="<?= $this->rubrique['ID_RUBRIQUE'] ?>">
             <label for="nom_rubrique">Nom de la rubrique</label>
-            <input type="text" name="nom_rubrique" id="nom_rubrique" value="<?php echo $this->rubrique['NOM'] ?>" required>
+            <input type="text" name="nom_rubrique" id="nom_rubrique" value="<?= htmlspecialchars($this->rubrique['NOM'], ENT_QUOTES) ?>" required>
             <label for="afficher_rubrique">Afficher la rubrique par défaut</label>
             <input
                 type="hidden"
@@ -20,7 +20,7 @@
                 type="checkbox"
                 name="afficher_rubrique"
                 value="1"
-                <?php echo $this->rubrique['DEFAULT_DISPLAY'] ? 'checked' : '' ?>
+                <?= $this->rubrique['DEFAULT_DISPLAY'] ? 'checked' : '' ?>
             >
 
             <div class="pull-right">
@@ -46,8 +46,8 @@
 <div id="edit-rubrique" class="row-fluid">
     <div class="span4 infos-champ">
         <form enctype="application/x-www-form-urlencoded" method="post" class="form-inline" action>
-            <?php echo $this->fieldForm->nom_champ ?>
-            <?php echo $this->fieldForm->type_champ ?>
+            <?= $this->fieldForm->nom_champ ?>
+            <?= $this->fieldForm->type_champ ?>
 
             <div id="div-list-value">
                 <h5>Définition des valeurs de la liste</h5>
@@ -60,7 +60,7 @@
                 </div>
             </div>
 
-            <?php echo $this->fieldForm->save ?>
+            <?= $this->fieldForm->save ?>
         </form>
     </div>
 
@@ -77,9 +77,9 @@
                 <tbody>
                     <?php foreach($this->champs as $champ): ?>
                         <tr>
-                            <td><?php echo $champ['NOM'] ?></td>
+                            <td><?= $champ['NOM'] ?></td>
                             <td>
-                                <?php echo $champ['TYPE'] ?>
+                                <?= $champ['TYPE'] ?>
                                 <?php if($champ['TYPE'] === 'Liste'): ?>
                                     <?php if(count($champ['VALEURS']) === 0): ?>
                                         <div class="alert">
@@ -90,7 +90,7 @@
 
                                     <ul>
                                         <?php foreach($champ['VALEURS'] as $valeur): ?>
-                                            <li><?php echo $valeur['VALEUR'] ?></li>
+                                            <li><?= $valeur['VALEUR'] ?></li>
                                         <?php endforeach ?>
                                     </ul>
                                 <?php endif ?>
@@ -100,7 +100,7 @@
                                     <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'edit-champ', 'rubrique' => $this->rubrique['ID_RUBRIQUE'], 'champ' => $champ['ID_CHAMP']], null, true) ?>">
                                         <i title='Modifier' class='icon-pencil'></i>
                                     </a>
-                                    <a href="" data-id="<?php echo $champ['ID_CHAMP'] ?>" data-rubrique-id="<?php echo $this->rubrique['ID_RUBRIQUE'] ?>" class="delete-champ">
+                                    <a href="" data-id="<?= $champ['ID_CHAMP'] ?>" data-rubrique-id="<?= $this->rubrique['ID_RUBRIQUE'] ?>" class="delete-champ">
                                         <i title='Supprimer' class='icon-trash'></i>
                                     </a>
                                 </div>
