Correction sur la surbrillance d'un onglet

--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -36,8 +36,9 @@
             </li>
         <?php endif ?>
 
+        <!-- FIXME Ajouter le droit de la partie Admin -->
         <?php if ($this->idTypeDossier === 1): ?>
-            <li class = <?= $this->action == "verifications-techniques" ? "active" : "" ?>>
+            <li class="<?= strpos($this->action, 'verifications-techniques') !== false ? 'active' : '' ?>">
                 <a href= <?= $this->url(array("controller" => "dossier", "action"=>"verifications-techniques", "id" => $this->idDossier), false, true) ?>>
                     <i class="icon-file icon-black"></i>
                     Vérifications techniques
@@ -45,7 +46,7 @@
             </li>
         <?php endif ?>
 
-        <?php if ($this->idTypeDossier == 1 && $this->isAllowedEffectifsDegagements): ?>
+        <?php if ($this->idTypeDossier === 1 && $this->isAllowedEffectifsDegagements): ?>
             <li class="<?= strpos($this->action, 'effectifs-degagements-dossier') !== false ? 'active' : '' ?>">
                 <a class='sep' href='<?= $this->url(array('action' => 'effectifs-degagements-dossier')) ?>' >
                     <em class="icon-th-list icon-black"></em>
