--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -36,8 +36,7 @@
             </li>
         <?php endif ?>
 
-        <!-- FIXME Ajouter le droit de la partie Admin -->
-        <?php if ($this->idTypeDossier === 1): ?>
+        <?php if ($this->idTypeDossier === 2 && $this->isAllowedVerificationsTechniques): ?>
             <li class="<?= strpos($this->action, 'verifications-techniques') !== false ? 'active' : '' ?>">
                 <a href= <?= $this->url(array("controller" => "dossier", "action"=>"verifications-techniques", "id" => $this->idDossier), false, true) ?>>
                     <i class="icon-file icon-black"></i>
