--- a/application/views/scripts/calendrier-des-commissions/generationpv.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationpv.phtml
@@ -158,6 +158,48 @@ foreach($this->membresFiles as $val => $membre){
                             $segmentAvisDerogations->merge();
                         }
 
+                        // Gestion des formulaires personnalisés
+                        $serviceUtils = new Service_Utils();
+
+                        foreach ($dossierInfos['FORMULAIRES'] as $formulaire) {
+                            // Permet d'avoir les informations unitairement
+                            foreach ($formulaire['RUBRIQUES'] as $rubrique) {
+                                addChamp(
+                                    $odf,
+                                    $serviceUtils->getFullFusionName(
+                                        $formulaire['NOM_INTERNE'],
+                                        [
+                                            $rubrique['NOM']
+                                        ]
+                                    ),
+                                    $rubrique['NOM']
+                                );
+
+                                foreach ($rubrique['CHAMPS'] as $champ) {
+                                    // Définition du libellé pour les cases à cocher
+                                    if ('Case à cocher' === $champ['TYPE']) {
+                                        if (true === boolval($champ['VALEUR'])) {
+                                            $champ['VALEUR'] = 'Oui';
+                                        } else {
+                                            $champ['VALEUR'] = 'Non';
+                                        }
+                                    }
+
+                                    addChamp(
+                                        $odf,
+                                        $serviceUtils->getFullFusionName(
+                                            $formulaire['NOM_INTERNE'],
+                                            [
+                                                $rubrique['NOM'],
+                                                $champ['NOM']
+                                            ]
+                                        ),
+                                        $champ['VALEUR']
+                                    );
+                                }
+                            }
+                        }
+
 						$dateComm = new Zend_Date($this->dateComm);
 						addChamp($dossInfos,'dateCommission', $dateComm->get(Zend_Date::DAY." ".Zend_Date::MONTH_NAME." ".Zend_Date::YEAR));
 
