Correction sur la génération de l'odj

--- a/application/views/scripts/calendrier-des-commissions/generationodj.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationodj.phtml
@@ -256,6 +256,48 @@ function retrieveInfoDoss($segment, $dossierInfos) {
 
         $segmentAvisDerogations->merge();
     }
+
+    // Gestion des formulaires personnalisés
+    $serviceUtils = new Service_Utils();
+
+    foreach ($dossierInfos['FORMULAIRES'] as $formulaire) {
+        // Permet d'avoir les informations unitairement
+        foreach ($formulaire['RUBRIQUES'] as $rubrique) {
+            addChamp(
+                $segment,
+                $serviceUtils->getFullFusionName(
+                    $formulaire['NOM_INTERNE'],
+                    [
+                        $rubrique['NOM']
+                    ]
+                ),
+                $rubrique['NOM']
+            );
+
+            foreach ($rubrique['CHAMPS'] as $champ) {
+                // Définition du libellé pour les cases à cocher
+                if ('Case à cocher' === $champ['TYPE']) {
+                    if (true === boolval($champ['VALEUR'])) {
+                        $champ['VALEUR'] = 'Oui';
+                    } else {
+                        $champ['VALEUR'] = 'Non';
+                    }
+                }
+
+                addChamp(
+                    $segment,
+                    $serviceUtils->getFullFusionName(
+                        $formulaire['NOM_INTERNE'],
+                        [
+                            $rubrique['NOM'],
+                            $champ['NOM']
+                        ]
+                    ),
+                    $champ['VALEUR']
+                );
+            }
+        }
+    }
 }
 
 function savePj($dateCommId,$libelleMembre){
