--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -36,7 +36,16 @@
             </li>
         <?php endif ?>
 
-        <?php if ($this->idTypeDossier == 1 && $this->isAllowedEffectifsDegagements): ?>
+        <?php if ($this->idTypeDossier === 2 && $this->isAllowedVerificationsTechniques): ?>
+            <li class="<?= strpos($this->action, 'verifications-techniques') !== false ? 'active' : '' ?>">
+                <a href= <?= $this->url(array("controller" => "dossier", "action"=>"verifications-techniques", "id" => $this->idDossier), false, true) ?>>
+                    <i class="icon-file icon-black"></i>
+                    Vérifications techniques
+                </a>
+            </li>
+        <?php endif ?>
+
+        <?php if ($this->idTypeDossier === 1 && $this->isAllowedEffectifsDegagements): ?>
             <li class="<?= strpos($this->action, 'effectifs-degagements-dossier') !== false ? 'active' : '' ?>">
                 <a class='sep' href='<?= $this->url(array('action' => 'effectifs-degagements-dossier')) ?>' >
                     <em class="icon-th-list icon-black"></em>
