--- a/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
@@ -187,7 +187,49 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
                     $segmentAvisDerogations->merge();
                 }
 
-				$dossInfos->merge();
+                // Gestion des formulaires personnalisés
+                $serviceUtils = new Service_Utils();
+
+                foreach ($dossierInfos['FORMULAIRES'] as $formulaire) {
+                    // Permet d'avoir les informations unitairement
+                    foreach ($formulaire['RUBRIQUES'] as $rubrique) {
+                        addChamp(
+                            $dossInfos,
+                            $serviceUtils->getFullFusionName(
+                                $formulaire['NOM_INTERNE'],
+                                [
+                                    $rubrique['NOM']
+                                ]
+                            ),
+                            $rubrique['NOM']
+                        );
+
+                        foreach ($rubrique['CHAMPS'] as $champ) {
+                            // Définition du libellé pour les cases à cocher
+                            if ('Case à cocher' === $champ['TYPE']) {
+                                if (true === boolval($champ['VALEUR'])) {
+                                    $champ['VALEUR'] = 'Oui';
+                                } else {
+                                    $champ['VALEUR'] = 'Non';
+                                }
+                            }
+
+                            addChamp(
+                                $dossInfos,
+                                $serviceUtils->getFullFusionName(
+                                    $formulaire['NOM_INTERNE'],
+                                    [
+                                        $rubrique['NOM'],
+                                        $champ['NOM']
+                                    ]
+                                ),
+                                $champ['VALEUR']
+                            );
+                        }
+                    }
+                }
+
+                $dossInfos->merge();
 			}
 		}
 	}
