--- a/application/views/scripts/formulaire/index.phtml
+++ b/application/views/scripts/formulaire/index.phtml
@@ -3,10 +3,10 @@
     $lastKey = end($arrayKeys);
 ?>
 <?php foreach($this->formulaires as $key => $formulaire) : ?>
-    <div id="<?php echo $formulaire['NOM_INTERNE'] ?>" class="row-fluid objet">
+    <div id="<?= $formulaire['NOM_INTERNE'] ?>" class="row-fluid objet">
         <div class="span12">
             <h2>
-                <?php echo $formulaire['NOM'] ?>
+                <?= $formulaire['NOM'] ?>
             </h2>
 
             <div class="row-fluid titles">
@@ -22,8 +22,8 @@
             </div>
 
             <div class="row-fluid">
-                <div id="<?php echo $formulaire['NOM_INTERNE'] ?>" class="span4 infos-rubrique">
-                    <?php echo $this->form ?>
+                <div id="<?= $formulaire['NOM_INTERNE'] ?>" class="span4 infos-rubrique">
+                    <?= $this->form ?>
                 </div>
 
                 <div class="span6 offset2 saved-rubriques">
@@ -39,9 +39,9 @@
                             <tbody>
                                 <?php foreach($formulaire['RUBRIQUES'] as $rubrique): ?>
                                     <tr>
-                                        <td><?php echo $rubrique['NOM'] ?></td>
+                                        <td><?= $rubrique['NOM'] ?></td>
                                         <td id='default-display'>
-                                            <?php if($rubrique['DEFAULT_DISPLAY']): ?>
+                                            <?php if($rubrique['DISPLAY']): ?>
                                                 <div class="text-center">
                                                     <i class="icon-ok"></i>
                                                 </div>
@@ -52,7 +52,7 @@
                                                 <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'edit-rubrique', 'rubrique' => $rubrique['ID_RUBRIQUE']], null, true) ?>">
                                                     <i title='Modifier' class='icon-pencil'></i>
                                                 </a>
-                                                <a href="" data-id="<?php echo $rubrique['ID_RUBRIQUE'] ?>" class="delete-rubrique">
+                                                <a href="" data-id="<?= $rubrique['ID_RUBRIQUE'] ?>" class="delete-rubrique">
                                                     <i title='Supprimer' class='icon-trash'></i>
                                                 </a>
                                             </div>
