--- a/application/layouts/menu_admin.phtml
+++ b/application/layouts/menu_admin.phtml
@@ -49,6 +49,10 @@
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'changement') echo "class='active'" ?> >
         <a href='/changement' ><em class="icon-th-list icon-black"></em> Messages des alertes</a>
     </li>
+
+    <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'FusionCommand') echo "class='active'" ?> >
+        <a href='/FusionCommand' ><em class="icon-th-list icon-black"></em> Messages des alertes</a>
+    </li>
 </ul>
 
 <?php $this->placeholder('lateral_navigation')->captureEnd(); ?>
