rectification route vue

--- a/application/layouts/menu_admin.phtml
+++ b/application/layouts/menu_admin.phtml
@@ -51,7 +51,7 @@
     </li>
 
     <li <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'FusionCommand') echo "class='active'" ?> >
-        <a href='/FusionCommand' ><em class="icon-th-list icon-black"></em> Messages des alertes</a>
+        <a href='/fusion-command' ><em class="icon-th-list icon-black"></em> Fusion command</a>
     </li>
 </ul>
 
