--- a/application/views/scripts/fusion-des-communes/index.phtml
+++ b/application/views/scripts/fusion-des-communes/index.phtml
@@ -7,4 +7,11 @@
     </div>
 <?php endif ?>
 
+<?php if ($this->hasErrors): ?>
+    <div class="alert alert-error">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        La commande a retourné des erreurs, veuillez vérifier les logs d'erreur
+    </div>
+<?php endif ?>
+
 <?= $this->form ?>
